fix badges getting squished

--- a/assets/css/badges.css
+++ b/assets/css/badges.css
@@ -9,6 +9,7 @@
   padding: 0;
   margin: 0;
   display: inline;
+  width: 88px;
 }
 
 .sidebar-badges img {
@@ -17,4 +18,5 @@
   border-radius: 0;
   width: 88px;
   height: 31px;
+  object-fit: scale-down;
 }
